// Paste into https://dbdiagram.io → ER diagram, export PNG/PDF/SQL (from prisma/schema.prisma).
// Refresh from Postgres: npx prisma db pull

Project ratai24_postgres {
  database_type: "PostgreSQL"
  Note: "Contract.userId → User.id is logical only (no Prisma relation)."
}

Enum Role {
  GUEST
  USER
  ADMIN
}

Enum FuelType {
  PETROL
  PETROL_LPG
  DIESEL
  ELECTRIC
  HYBRID_HEV
  HYBRID_PHEV
}

Enum Gearbox {
  MANUAL
  AUTOMATIC
}

Enum BodyType {
  SEDAN
  HATCHBACK
  SUV
  WAGON
  COUPE
  CONVERTIBLE
  VAN
  PICKUP
  MINIBUS_PASSENGER
  MINIBUS_CARGO
}

Enum CarState {
  AVAILABLE
  LEASED
  MAINTENANCE
}

Enum ContractState {
  DRAFT
  ACTIVE
  COMPLETED
  CANCELLED
}

Table City {
  id int [pk, increment]
  name varchar [unique, not null]
  country varchar [not null]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table User {
  id int [pk, increment]
  email varchar [unique, not null]
  passwordHash varchar [not null]
  firstName varchar
  lastName varchar
  phoneNumber varchar
  role Role [not null, default: 'USER']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table RefreshToken {
  id int [pk, increment]
  token varchar [unique, not null]
  userId int [not null, ref: > User.id, delete: cascade]
  expiresAt timestamp [not null]
  createdAt timestamp [not null]
}

Table PasswordResetToken {
  id int [pk, increment]
  tokenHash varchar [unique, not null]
  userId int [not null, ref: > User.id, delete: cascade]
  expiresAt timestamp [not null]
  createdAt timestamp [not null]

  Indexes {
    userId
  }
}

Table Car {
  id int [pk, increment]
  vin varchar [unique, not null]
  numberPlate varchar [unique, not null]
  make varchar [not null]
  model varchar [not null]
  year int [not null]
  pricePerDay float [not null]
  availableForLease boolean [not null, default: true]
  availableForSale boolean [not null, default: false]
  salePrice decimal(10,2)
  saleDescription text
  useDynamicPricing boolean [not null, default: true]
  basePricePerDay float
  minPricePerDay float
  maxPricePerDay float
  dailyOperatingCost float
  monthlyFinancingCost float
  purchasePrice float
  utilizationRate float [default: 0]
  averageRevenuePerDay float
  lastUtilizationUpdate timestamp
  applyUtilizationPricing boolean [not null, default: true]
  utilizationMultiplierOverride float
  lastMaintenanceDate timestamp
  nextMaintenanceKm int
  maintenanceScore float [default: 100]
  cityId int [not null, ref: > City.id, delete: cascade]
  seatCount int [not null, default: 5]
  fuelType FuelType [not null]
  powerKW int [not null]
  engineCapacityL float
  bodyType BodyType [not null]
  gearbox Gearbox [not null]
  state CarState [not null, default: 'AVAILABLE']
  odometerKm int [not null, default: 0]
  colour varchar
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table CarImage {
  id int [pk, increment]
  carId int [not null, ref: > Car.id, delete: cascade]
  filename varchar [not null]
  url varchar [not null]
  isMain boolean [not null, default: false]
  galleryOrder int [not null, default: 0, note: "Prisma column: order"]
  createdAt timestamp [not null]

  Indexes {
    carId
  }
}

Table CarPrepBlock {
  id int [pk, increment]
  carId int [not null, ref: > Car.id, delete: cascade]
  startDate timestamp [not null]
  endDate timestamp [not null]
  createdAt timestamp [not null]

  Indexes {
    (carId, startDate, endDate)
  }
}

Table PricingSnapshot {
  id int [pk, increment]
  carId int [not null, ref: > Car.id, delete: cascade]
  cityId int [not null, ref: > City.id]
  calculatedPrice float [not null]
  basePrice float [not null]
  demandMultiplier float [not null]
  seasonalMultiplier float [not null]
  utilizationMultiplier float [not null]
  durationMultiplier float [not null]
  customerMultiplier float [not null, default: 1.0]
  finalPrice float [not null]
  availableCars int [not null]
  activeContracts int [not null]
  requestDate timestamp [not null]
  startDate timestamp [not null]
  duration int [not null]
  createdAt timestamp [not null]

  Indexes {
    (carId, createdAt)
    (cityId, createdAt)
  }
}

Table Contract {
  id int [pk, increment]
  userId int [not null, note: "Logical FK User.id"]
  carId int [not null, ref: > Car.id, delete: cascade]
  startDate timestamp [not null]
  endDate timestamp [not null]
  totalPrice float [not null]
  state ContractState [not null, default: 'ACTIVE']
  mileageStartKm int [not null]
  mileageEndKm int
  basePrice float
  dynamicPrice float
  finalPrice float
  appliedDiscount float [default: 0]
  demandMultiplier float
  seasonalMultiplier float
  durationDiscount float
  pricingSnapshotId int [ref: > PricingSnapshot.id]
  fuelLevelStartPct int [not null]
  fuelLevelEndPct int
  extraFees float [not null, default: 0]
  notes text
}

Table CityDemandMetrics {
  id int [pk, increment]
  cityId int [unique, not null, ref: > City.id, delete: cascade]
  totalCars int [not null]
  availableCars int [not null]
  activeContracts int [not null]
  utilizationRate float [not null]
  demandScore float [not null]
  avgUtilization30d float
  avgUtilization90d float
  avgPriceMultiplier float
  lastCalculated timestamp [not null]
  updatedAt timestamp [not null]

  Indexes {
    lastCalculated
  }
}

Table SeasonalFactor {
  id int [pk, increment]
  name varchar [not null]
  startDate timestamp [not null]
  endDate timestamp [not null]
  multiplier float [not null]
  cityId int [ref: > City.id]
  isActive boolean [not null, default: true]
  createdAt timestamp [not null]

  Indexes {
    (startDate, endDate, isActive)
  }
}

Table PricingRule {
  id int [pk, increment]
  name varchar [not null]
  description text
  carId int [ref: > Car.id, delete: cascade]
  cityId int [ref: > City.id]
  startDate timestamp
  endDate timestamp
  fixedPrice float
  multiplier float
  minPrice float
  maxPrice float
  priority int [not null, default: 0]
  isActive boolean [not null, default: true]
  createdAt timestamp [not null]

  Indexes {
    (startDate, endDate, isActive)
    priority
  }
}

Table Contact {
  id int [pk, increment]
  email varchar [not null]
  phone varchar [not null]
  businessHoursWeekdays varchar [not null, default: '8:00 - 18:00']
  businessHoursWeekend varchar [not null, default: '9:00 - 15:00']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table ContactOperationArea {
  id int [pk, increment]
  contactId int [not null, ref: > Contact.id, delete: cascade]
  cityId int [not null, ref: > City.id, delete: cascade]
  address varchar
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  Indexes {
    (contactId, cityId) [unique]
    contactId
    cityId
  }
}
